<resources>
    <string name="app_name">DistanceTracker</string>
    <string name="Title">Codelab Sauri</string>
    <string name="Long">Longtitude:</string>
    <string name="Lat">Latitude:</string>
    <string name="Loc">Location:</string>
    <string name="Spd">Speed:</string>
    <string name="He">Height:</string>
    <string name="Maxspd">MAX Speed:</string>
    <string name="Dis">Distance:</string>
    <string name="AvgSpeed">AVG Speed:</string>
    <string name="btn">Start</string>
    <string name="btnRoute">Show Route</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnStop">Stop</string>
    <string name="btnQR">QR Scanner</string>
    <string name="title_activity_test">Map</string>
    <string name="btn_login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="btn_start">START</string>
    <string name="privateDrive">Private</string>
    <string name="business">Business</string>
    <string name="btn_Stop">STOP</string>
    <string name="business_drive">Business Drive</string>
    <string name="dummy_time">02:15:12</string>
    <string name="time">Time</string>
    <string name="dummy_distance">199,0 km</string>
    <string name="distance">Distance</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="Select">Select Car</string>
    <string name="OR_textview">OR</string>
    <string name="ChooseCar_textview">Click car to choose</string>
    <string name="choose_text">Choose</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="back">Previous</string>
    <string name="txt_image">Image</string>
</resources>
