<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity"
    android:background="@drawable/button_btn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingVertical="20dp"
        android:text="LOGDRIVER"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linearlayout_design"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-60dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
        android:text="@string/Username"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/Password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_LoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_btn"
        android:text="@string/btn_login"
        android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>